bug fix: enhanced display on mobile devices

--- a/wiki/css/theme_mobile.css
+++ b/wiki/css/theme_mobile.css
@@ -24,7 +24,7 @@ Copyright info:
 @media screen and (max-width: 1099px) {
 	.global {
 		text-align: left;
-		margin: 60px 30px;
+		margin: 60px 0;
 		padding: 20px 60px 0;
 	}
 
@@ -34,13 +34,13 @@ Copyright info:
 	
 	.global h1 {
 		font-size: 40px;
-		text-align: center;
+		text-align: left;
 		margin: 35px 0;
 	}
 	
 	.global h2 {
 		font-size: 18px;
-		text-align: center;
+		text-align: left;
 		margin: 15px 0;
 	}
 
@@ -65,20 +65,5 @@ Copyright info:
 
 	.post-text > img {
 		max-width: 100%;
-	}
-
-	section.post footer {
-		text-align: center;
-	}
-
-	nav.prevandnext {
-		margin: 30px 30px 30px 30px;
-		padding-left: 60px;
-		padding-right: 60px;
-	}
-
-	.comment-container {
-		margin: 30px 30px 30px 30px;
-		padding: 20px 60px 60px;
 	}
 }
